--- a/public/signin.html
+++ b/public/signin.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sign Up</title>
+  <title>Login</title>
   <link rel="stylesheet" href="styles.css">
   <style>
     
@@ -92,7 +92,7 @@ a:hover {
 <body>
   <div class="body-container">
   <div class="form-container">
-    <h1>Sign Up</h1>
+    <h1>Login</h1>
   <form action="/signup" method="POST">
     <label for="username">Username:</label>
     <input type="text" id="username" name="username" required>
