--- a/public/signin.html
+++ b/public/signin.html
@@ -86,6 +86,11 @@ a {
 a:hover {
   text-decoration: underline;
 }
+.loginwithqr{
+    all: unset;
+   color: white;
+   font-size: 1.1rem;
+}
 
   </style>
 </head>
@@ -93,12 +98,8 @@ a:hover {
   <div class="body-container">
   <div class="form-container">
     <h1>Login</h1>
-  <form action="/signup" method="POST">
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="username" required>
-
-    <label for="dob">Date of Birth</label>
-    <input type="date" id="" name="dob" required>
+  <form action="/signin" method="POST">
+   
 
     <label for="email">Email:</label>
     <input type="email" id="email" name="email" required>
@@ -106,9 +107,15 @@ a:hover {
     <label for="password">Password:</label>
     <input type="password" id="password" name="password" required>
 
-    <button type="submit">Sign Up</button>
+    <button type="submit">Login</button>
   </form>
-  <p>Already have an account? <a href="/signin">Sign In</a></p>
+  <p>Don't have an account? <a href="/signup">Signup</a></p>
+  <br>
+  <p>OR</p>
+<br>
+<p><a href="/loginwithqr" class="loginwithqr">Login With QR</a></p>
+
+  </div>
 </div>
 </div>
 </body>
