--- a/public/signup.html
+++ b/public/signup.html
@@ -7,109 +7,168 @@
   <title>Sign Up</title>
   <link rel="stylesheet" href="styles.css">
   <style>
-    
     body {
-  margin: 0;
-  padding: 0;
-  background-color: #1c1c1c;
-  height: 100vh;
-  font-family: Arial, sans-serif; /* Add a generic font-family */
-}
+      margin: 0;
+      padding: 0;
+      background-color: #1c1c1c;
+      height: 100vh;
+      font-family: Arial, sans-serif;
+    }
 
-.body-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-}
+    .body-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+    }
 
-.form-container {
-  height: auto; /* Change to auto to adjust based on content */
-  width: 80%; /* Adjust the width as needed */
-  max-width: 400px; /* Add max-width for better responsiveness */
-  /* background-color: beige; */
-  padding: 20px;
-  color: white;
-  box-sizing: border-box; /* Include padding in the width */
-  border-radius: 10px; /* Add some border-radius for a rounded look */
-  -webkit-box-shadow:0px 0px 186px 48px rgba(168,46,255,0.55);
--moz-box-shadow: 0px 0px 186px 48px rgba(168,46,255,0.55);
-box-shadow: 0px 0px 186px 48px rgba(168,46,255,0.55);
+    .form-container {
+      height: auto;
+      width: 80%;
+      max-width: 400px;
+      padding: 20px;
+      color: white;
+      box-sizing: border-box;
+      border-radius: 10px;
+      -webkit-box-shadow: 0px 0px 186px 48px rgba(168, 46, 255, 0.55);
+      -moz-box-shadow: 0px 0px 186px 48px rgba(168, 46, 255, 0.55);
+      box-shadow: 0px 0px 186px 48px rgba(168, 46, 255, 0.55);
+      text-align: center; /* Center the form content */
+    }
 
-}
+    h1 {
+      text-align: center;
+    }
 
-h1 {
-  text-align: center; /* Center the heading */
-}
+    form {
+      display: flex;
+      flex-direction: column;
+      color: rgb(181, 181, 181);
+    }
 
-form {
-  display: flex;
-  flex-direction: column;
-  color: rgb(181, 181, 181);
-}
+    label {
+      margin-bottom: 8px;
+      text-align: left; /* Align labels to the left */
+      margin-left: 5px;
+    }
 
-label {
-  margin-bottom: 8px; 
-}
+    input {
+      padding: 8px;
+      margin-bottom: 16px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
 
-input {
-  padding: 8px;
-  margin-bottom: 16px; /* Add spacing between inputs */
-  border: 1px solid #ccc;
-  border-radius: 4px;
-}
+    #profile-pic-container {
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      overflow: hidden;
+      margin: 0 auto 16px;
+    }
 
-button {
-  background-color: #4caf50;
-  color: white;
-  padding: 10px;
-  border: none;
-  margin-top: 16px;
-  border-radius: 4px;
-  cursor: pointer;
-}
+    #profile-pic-container img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
 
-button:hover {
-  background-color: #45a049;
-}
+    input[type="file"] {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      opacity: 0;
+      cursor: pointer;
+    }
 
-p {
-  text-align: center;
-  margin-top: 16px; 
-}
+    .upload-btn-wrapper {
+      position: relative;
+      overflow: hidden;
+      display: inline-block;
+      width: 100%;
+      height: 100%;
+    }
 
-a {
-  color: #007bff;
-  text-decoration: none;
-}
+    .btn {
+      border: 2px solid gray;
+      color: gray;
+      background-color: white;
+      border-radius: 8px;
+      font-size: 14px;
+      font-weight: bold;
+    }
 
-a:hover {
-  text-decoration: underline;
-}
+    button {
+      background-color: #4caf50;
+      color: white;
+      padding: 10px;
+      border: none;
+      margin-top: 16px;
+      border-radius: 4px;
+      cursor: pointer;
+    }
 
+    button:hover {
+      background-color: #45a049;
+    }
+
+    p {
+      text-align: center;
+      margin-top: 16px;
+    }
+
+    a {
+      color: #007bff;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
   <div class="body-container">
-  <div class="form-container">
-    <h1>Sign Up</h1>
-  <form action="/signup" method="POST">
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="username" required>
+    <div class="form-container">
+      <h1>Sign Up</h1>
+      <form action="/signup" method="POST">
+        <div id="profile-pic-container" class="upload-btn-wrapper">
+          <img src="#" alt="Profile Picture">
+          <input type="file" name="profilePic" accept="image/*" onchange="previewImage(this)">
+          <button class="btn">Choose Image</button>
+        </div>
 
-    <label for="dob">Date of Birth</label>
-    <input type="date" id="" name="dob" required>
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username" required>
 
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email" required>
+        <label for="dob">Date of Birth:</label>
+        <input type="date" id="" name="dob" required>
 
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="password" required>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
 
-    <button type="submit">Sign Up</button>
-  </form>
-  <p>Already have an account? <a href="/signin">Sign In</a></p>
-</div>
-</div>
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" required>
+
+        <button type="submit">Sign Up</button>
+      </form>
+      <p>Already have an account? <a href="/signin">Sign In</a></p>
+    </div>
+  </div>
+
+  <script>
+    function previewImage(input) {
+      var file = input.files[0];
+      if (file) {
+        var reader = new FileReader();
+        reader.onload = function (e) {
+          document.querySelector('#profile-pic-container img').setAttribute('src', e.target.result);
+        };
+        reader.readAsDataURL(file);
+      }
+    }
+  </script>
 </body>
 </html>
