working signup and signin

--- a/public/signup.html
+++ b/public/signup.html
@@ -139,7 +139,7 @@
       <form action="/signup" method="POST" enctype="multipart/form-data">
         <div id="profile-pic-container" class="upload-btn-wrapper">
           <img src="assets/profile-user.png" alt="Profile Picture">
-          <input type="file" name="profileImage" accept="image/*" onchange="previewImage(this)">
+          <input type="file" name="profileImage" accept="image/*" onchange="previewImage(this)" required>
 
         </div>
         
