--- a/public/home.html
+++ b/public/home.html
@@ -41,7 +41,7 @@
   <body>
     <div class="container">
       <div class="container-in">
-        <div class="box-1 box"><p>Create new group</p></div>
+        <div class="box-1 box"><p> <a href="/creategroup"> Create new group</a></p></div>
         <div class="box-2 box">
           <p>Join group</p>
         </div>
