--- a/public/creategroup.html
+++ b/public/creategroup.html
@@ -117,6 +117,7 @@
 
        
     </script>
-
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 </body>
 </html>
