--- a/public/home.html
+++ b/public/home.html
@@ -41,9 +41,8 @@
   <body>
     <div class="container">
       <div class="container-in">
-        <div class="box-1 box"><p> <a href="/creategroup"> Create new group</a></p></div>
-        <div class="box-2 box">
-          <p>Join group</p>
+        <div class="box-1 box"><p> <a href="/joingroup"> join group</a></p></div>
+      
         </div>
       </div>
 
