--- a/public/joingroup.html
+++ b/public/joingroup.html
@@ -12,6 +12,8 @@
             justify-content: center;
             height: 100vh;
             margin: 0;
+            background: rgb(2,0,36);
+background: radial-gradient(circle, rgba(2,0,36,0.6727941176470589) 7%, rgba(26,9,121,0.8576680672268908) 49%, rgba(218,0,255,1) 100%);
         }
         #joinGroupContainer {
             text-align: center;
@@ -19,6 +21,7 @@
             border: 1px solid #ccc;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            background-color: rgb(217, 217, 217);
         }
         label {
             display: block;
@@ -36,6 +39,7 @@
             color: white;
             border: none;
             cursor: pointer;
+            border-radius: 5px;
         }
         button:hover {
             background-color: #45a049;
