--- a/public/signup.html
+++ b/public/signup.html
@@ -160,6 +160,7 @@
       <p>Already have an account? <a href="/signin">Sign In</a></p>
     </div>
   </div>
+  <div id="recaptcha"></div>
 
   <script>
     function previewImage(input) {
@@ -173,5 +174,7 @@
       }
     }
   </script>
+  
+
 </body>
 </html>
