--- a/public/chatexp.html
+++ b/public/chatexp.html
@@ -492,7 +492,7 @@
     <div class="app-container">
         <aside class="sidebar">
             <div class="sidebar-header">
-                <div class="logo">Elite Chat</div>
+                <div class="logo">Realtime GD</div>
             </div>
             <div class="channels">
                 <div class="channel active">
@@ -509,7 +509,7 @@
         <main class="main-content">
             <header class="chat-header">
                 <div class="chat-title">
-                    <h2>General Chat</h2>
+                    <h2>Group-1</h2>
                     <div class="typing-indicator">
                         <div class="typing-dot"></div>
                         <div class="typing-dot"></div>
